@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.46 2012/08/21 15:49:54 tez Exp $
+$NetBSD: distinfo,v 1.47 2012/11/03 22:50:22 morr Exp $
 
 SHA1 (fetchmail-6.3.22.tar.bz2) = f9411a16d4055669e5cfd89bf38acba6a5cce041
 RMD160 (fetchmail-6.3.22.tar.bz2) = b1b4ae20e7fc6d307cf97c697d5e27daddc6bc72
 Size (fetchmail-6.3.22.tar.bz2) = 1724108 bytes
-SHA1 (patch-Makefile.in) = 31e89c362185787a2cc7e3bbf144635777c1bab4
+SHA1 (patch-Makefile.in) = c08ef115550f004496481e610140d7d2391016b2
