@@ -1,11 +1,14 @@
-@comment $NetBSD: PLIST,v 1.3 2011/11/17 18:47:42 cheusov Exp $
+@comment $NetBSD$
 bin/cvs_checksum
+bin/makefiles2deps
 bin/pkg_assignments2pkgpath
 bin/pkg_bin_summary
 bin/pkg_cleanup_distdir
 bin/pkg_cmp_summary
 bin/pkg_digger
 bin/pkg_digger_backend
+bin/pkg_digger_installed
+bin/pkg_digger_summary
 bin/pkg_grep_summary
 bin/pkg_lint_summary
 bin/pkg_list_all_pkgs
@@ -29,10 +32,13 @@ libexec/psu/get_processed_pkgs
 libexec/psu/sig_handler.sh
 libexec/psu/summary2multi_variants
 man/man1/cvs_checksum.1
+man/man1/makefiles2deps.1
 man/man1/pkg_bin_summary.1
 man/man1/pkg_cleanup_distdir.1
 man/man1/pkg_cmp_summary.1
 man/man1/pkg_digger.1
+man/man1/pkg_digger_installed.1
+man/man1/pkg_digger_summary.1
 man/man1/pkg_grep_summary.1
 man/man1/pkg_lint_summary.1
 man/man1/pkg_list_all_pkgs.1
