@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.12 2012/09/07 15:17:35 cheusov Exp $
+$NetBSD: distinfo,v 1.13 2012/10/12 17:42:09 cheusov Exp $
 
-SHA1 (pkg_summary-utils-0.58.5.tar.gz) = a3d92273ed8e3402caf1986d7f5b6c0f6520496f
-RMD160 (pkg_summary-utils-0.58.5.tar.gz) = 72c9c819d3028b796d7b53424c96a11de1271cb7
-Size (pkg_summary-utils-0.58.5.tar.gz) = 137442 bytes
+SHA1 (pkg_summary-utils-0.59.0.tar.gz) = a40dac6aee1c8482d8e2e7047fa84e5ffad72467
+RMD160 (pkg_summary-utils-0.59.0.tar.gz) = 0e2f4d7b174f51526d73fa6d3de0cea4db7fa6b5
+Size (pkg_summary-utils-0.59.0.tar.gz) = 145656 bytes
